// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (object-curly-spacing) /src/tslint-eslint-rules/object-curly-spacing/test.ts[1, 11]: A space is required after '{'
ERROR: (object-curly-spacing) /src/tslint-eslint-rules/object-curly-spacing/test.ts[1, 15]: A space is required before '}'

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
const x = {a:1};

======
const x = { a: 1 };

>>>>>> after
"
`;
